<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/timer"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_timer_24"
        android:title="@string/timer_action_title"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/search_page"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search_action_title"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/news_feed"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_library_books_24"
        android:title="@string/news_feed_action_title"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/my_library"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_book_24"
        android:title="@string/my_library_action_title"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/my_page"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/my_page_action_title"
        app:showAsAction="ifRoom"/>


</menu>